# Betternotes

./: .gitignore  README.md  design.md  fix-git.sh  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: RELEASING_MACOS.md
scripts/: install-macos.sh  run-dev-app.sh  sync-dev-app-bundle.sh
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  db.rs  integrations.rs  jira.rs  jira_nlp.rs  keychain.rs  lib.rs  main.rs  mcp.rs  models.rs  note_crypto.rs
src/components/CommandPalette/: CommandPalette.module.css  CommandPalette.tsx
src/components/Notes/: AgentBlock.module.css  AgentBlock.tsx  AgentBlockNodeView.tsx  FindInNoteBar.module.css  FindInNoteBar.tsx  GraphView.tsx  (+27 more)
src/extensions/: AgentBlockExtension.ts  BetternoteTaskItem.ts  FindInNoteExtension.ts  FlatListItem.ts  JiraChipExtension.ts  NoNestedLists.ts  WikiLinkExtension.ts
src/hooks/: useBreakpoint.ts  useKeyboard.ts  useReminders.ts  useSidebar.ts  useTheme.ts
src/lib/: agentBlockCallbacks.ts  api.ts  findInNote.ts  integrationGuides.ts  integrations.ts  jiraAgent.ts  jiraInsert.ts  jiraKeys.ts  jiraMyIssuesJql.ts  jiraSprint.ts  jiraTasks.ts  menuPosition.ts  noAutocorrect.ts  noteColors.ts  noteExport.ts  noteLinks.ts  notePreview.ts  notifications.ts  openExternal.ts  reminderFormat.ts  reminderSchedule.ts  settingsDirty.ts  setupAssistantLocal.ts  taskParser.ts
src/store/: appStore.ts
src/styles/: global.css  tokens.css
src/types/: index.ts
(+19 files in other folders)
