[package]
name = "betternotes"
version = "0.1.0"
description = "BetterNotes - Notes + Tasks + Jira"
authors = ["you"]
edition = "2021"

[lib]
name = "betternotes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
